--- a/package.json
+++ b/package.json
@@ -9,9 +9,17 @@
     "axios": "0.18.0",
     "dotenv": "6.1.0",
     "fastify": "1.12.1",
-    "node": "10.12.0"
+    "node": "10.12.0",
+    "nodemon": "1.18.4"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "test": "mocha test/*",
+    "test-debug": "mocha --inspect-brk test/*"
+
+  },
+  "devDependencies": {
+    "chai": "4.2.0",
+    "mocha": "5.2.0"
   }
 }
