--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "lint-staged": "7.3.0",
     "mocha": "5.2.0",
     "nodemon": "1.18.4",
-    "prettier": "1.14.3"
+    "prettier": "1.14.3",
+    "sinon": "7.0.0"
   }
 }
