--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   },
   "scripts": {
     "start": "node index.js",
-    "test": "mocha test/*",
+    "test": "nyc mocha test/*",
     "test-debug": "mocha --inspect-brk test/*",
+    "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
     "precommit": "lint-staged"
   },
   "lint-staged": {
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "chai": "4.2.0",
+    "codecov": "3.1.0",
     "eslint": "5.7.0",
     "eslint-config-airbnb-base": "13.1.0",
     "eslint-config-prettier": "3.1.0",
@@ -34,6 +36,7 @@
     "lint-staged": "7.3.0",
     "mocha": "5.2.0",
     "nodemon": "1.18.4",
+    "nyc": "13.1.0",
     "prettier": "1.14.3",
     "sinon": "7.0.0"
   }
