--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "node": "10.12.0"
   },
   "scripts": {
-    "start": "node index.js",
+    "start": "node src/index.js",
     "test": "nyc mocha test/*",
     "test-debug": "mocha --inspect-brk test/*",
     "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
